2006-08-01 00:12-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile: Add GormNibWrapperBuilder.m
	* GormCore/GormClassManager.m: Correct nibData method to properly
	output information in classes.nib format.
	* GormCore/GormDocument.m: Slight improvement to windowAndRect:
	forObject:.
	* GormCore/GormFilePrefsManager.[hm]: Add nibData method.
	* GormInfo.plist: Change GSNibFileType entry to "Editor"
	* GormNibWrapperBuilder.m: Class to write nibs.
	
2006-07-18 23:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFunctions.m: Remove the width and height adjustment
	from the function minimalContainerFrame().
	* GormCore/GormPrivate.m: Add the encoding logic for saving
	NSCustomObject.
	* GormCore/GormViewWindow.m: Add the width and height here, instead
	of in the function.

2006-07-16 23:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFunctions.h:
	* GormCore/GormFunctions.m:
	* GormCore/GormViewWindow.m: Improved placement of standalone
	views when being loaded by .gorm files.

2006-07-15 18:34 Gregory John Casamento <greg_casamento@yahoo.com>

	* Images/Gorm.tiff: Slightly improved icon.  Based on suggestions
	from people on #gnustep.  More improvements to come.

2006-07-12 00:31 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: in testInterface, make the item with terminate:
	the "Quit Test" item, if none is found add one.

2006-07-10 01:32 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGormWrapperLoader.m: in loadFileWrapper:withDocument:
	removed the check for the info file.  Some earlier versions of
	the .gorm wrapper don't have this file.

2006-07-09 23:27 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Replace the destination or
	source of any connection which connects to an NSWindowTemplate object.

2006-07-09 17:59 Gregory John Casamento <greg_casamento@yahoo.com>
